[package]
name = "advent-of-shuttle-cch23"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
shuttle-axum = { version = "0.35", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35"
tokio = "1.35.0"
tracing = "0.1.40"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"